# Data-Django

./: .env  .gitignore  Dockerfile  build.sh  celerybeat-schedule.bak  fly.toml  pyproject.toml  render.yaml  requirements.txt  requirements2.txt
apps/access/: admin.py  models.py  signals.py
apps/access/migrations/: 0001_initial.py  0002_alter_acesso_user.py  0003_alter_acesso_permissao.py
apps/authentication/: forms.py  urls.py  views.py
apps/home/: admin.py  existing_models.py  funcoes.py  models.py  repasses.sql  tasks.py  urls.py  views.py  views_fix_repasse.py
apps/home/components/: cob_diario.py  creditos.py  debitos.py  funcionarios_registros.py  parcelas_deletadas.py  parcelas_taxas.py  registrar_contratos.py  repasses_retidos.py  taxas.py
apps/home/migrations/: 0001_initial.py  0018_alter_credito_cliente_alter_debito_cliente_and_more.py  0019_dado_pago.py  0020_repasseaprovado_remove_dado_pago_and_more.py  0021_remove_repasseaprovado_id_vendedor_and_more.py  0022_remove_repasseaprovado_dado_repasseaprovado_dado.py  0023_alter_repasseaprovado_dado.py  0024_parcelataxa.py  0025_parcelataxa_aprovada.py  0026_alter_pessoas_email.py  0027_parcelataxa_data_criado_parcelataxa_id_comprador_and_more.py  0028_credito_aprovada_debito_aprovada_taxa_aprovada.py  0029_repasseretido_aprovada.py  0030_dado_criado.py  0031_rename_data_criado_parcelataxa_criado.py  0032_auto_20230510_1519.py  0033_repasseretido_aprovada_para_repasse.py  0034_auto_20230510_1525.py  0035_auto_20230510_1641.py  0036_auto_20230511_1608.py  (+26 more)
core/: celery.py  settings.py  urls.py
(+51 files in other folders)
