[tool.poetry]
name = "data-django"
version = "0.1.0"
description = "MIT"
authors = ["Rip4568 <63131796+Rip4568@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "data_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
whitenoise = "^6.4.0"
gunicorn = "^20.1.0"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
